2005-12-17 Sebastien Granjoux <seb.sfo@free.fr>
 
 	* libanjuta/anjuta-launcher.c:
 	Fix a bug in AnjutaLauncher when output is bigger than buffer
 	Probably fix bug #315188 and #305134

2005-12-28	Johannes Schmid <jhs@gnome.org>
	
	* configure: Changed required gtk to 2.6.0, bumped VERSION to 2.02cvs
	* src/about.c: Use new gtk about dialog
	* plugins/project-wizard/templates/anjuta-plugin/src/plugin.c:
	Updated anjuta_ui_add_action_group_entries call
	
	Patch from Jean Breford <jean.breford@normalesup.org>
	and Markus Habermehl <bmh1980de@yahoo.de>:
	
	* libanjuta/anjuta-encodings.c: Fix crash in a much more nice way
	* AUTHORS: Added Jean and Markus

2005-12-23  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
	* plugins/search/search-replace.c :
	Bookmark all matched lines.
	* plugins/search/search-replace_backend.c :
	Fixed bug (Search in all project files).

2005-12-21	Johannes Schmid <jhs@gnome.org>
	
	* plugins/search/plugin.c:
	Fixed signal names
	* libanjuta/anjuta-encodings.c: Don't crash if uninitialized. Further
	investigation needed.
	
	AUTHORS: Added Ross Goldner

2005-12-19  Ross Golder  <ross@golder.org>

	* plugins/document-manager/anjuta-document-manager.plugin.in: Added
	application/xml MIME type.

2005-12-18  Johannes Schmid <jhs@gnome.org>
	
	po/POTFILES.in: Updated files after directory changes
	HACKING: Removed outdated section 3 (anoncvs)

2005-12-15  Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/build-basic-autotools/build-basic-autotools.c:
	Save all files in editor before running a command

	* plugins/tools/execute.c:
	Use document manager plugin instead of each editor for
	saving all files

2005-12-15  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c:
	(on_save_all1_activate), (on_swap_activate)
	plugins/document-manager/anjuta-docman.c:
	(on_save_as_filesel_response), (on_notebook_switch_page):
	
	Fixed some remaining issues in document-manger

2005-12-15	Johannes Schmid <jhs@gnome.org>
