@@ -52,6 +52,7 @@ Contributors:
 	Frederic RUAUDEL <grumz@users.sourceforge.net>
 	Giovanni Corriga  <valkadesh@libero.it> (Italy)
 	Gregory Schmitt  <gregory.schmitt@free.fr> (France)
+	Günther Brammer <gbrammer@gmx.de>
 	Hector Rivera Falu  <misha@phreaker.net>
 	Ishan Chattopadhyaya  <ichattopadhyaya@yahoo.com>
 	Jakub Steiner  <jimmac * ximian * com>
